[package]
name = "discord-notion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.72"
discord-flows = "0.5.1"
dotenv = "0.15.0"
flowsnet-platform-sdk = "0.1"
log = "0.4"
serde_json = "1"
tokio_wasi = { version = "1.25.0", features = ["rt", "macros"] }
serde = { version = "1", features = ["derive"] }
http_req_wasi = { version = "0.10", features = ["wasmedge_ssl"] }
unicase = "2.6.0"
notion-flows="0.1.1"
notion-wasi = "0.5.2"
slack-flows = "0.3.4"
